# memlp_tests

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  host_main.cpp  pico_bench.cpp  pico_main.cpp
arduino/: .gitignore
arduino/memlp_bench/: .gitignore  README.md  memlp_bench.ino  populate.sh
tests/: test_framework.h  test_layer.cpp  test_loss.cpp  test_mlp.cpp  test_static_mlp.cpp  test_static_mlp_fixed.cpp  test_utils.cpp
